k8s/apps/transform-hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transform-hub
  namespace: apps
  labels:
    app: transform-hub
spec:
  type: ClusterIP
  selector:
    app: transform-hub
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
